--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Felix Geisendörfer <felix@debuggable.com> (http://debuggable.com/)",
   "name": "require-like",
-  "description": "Generates require functions that act like those of a given module.",
+  "description": "Generates require functions that act as if they were operating in a given path.",
   "version": "0.0.0",
   "homepage": "https://github.com/felixge/node-require-like",
   "repository": {
