--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Felix Geisendörfer <felix@debuggable.com> (http://debuggable.com/)",
   "name": "require-like",
   "description": "Generates require functions that act as if they were operating in a given path.",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/felixge/node-require-like",
   "repository": {
     "type": "git",
@@ -19,5 +19,6 @@
   "devDependencies": {
     "hashish": "0.0.3",
     "urun": "0.0.4"
-  }
+  },
+  "optionalDependencies": {}
 }
