--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,36 @@
 language: node_js
+
+sudo: false
+
+branches:
+  only:
+    - master
+    - /^greenkeeper-.*$/
+
 node_js:
-  - 0.4
-  - 0.6
+  - '8'
+  - '9'
+  - '10'
+  - '11'
+  - '12'
+  - node
+
+os:
+  - windows
+  - linux
+  - osx
+
+matrix:
+  allow_failures:
+    - os: windows
+    
+env:
+  - NODE_ENV=testing
+
+cache:
+  directories:
+    - $HOME/.npm
+    - ~/.npm
+    - ~/.yarn-cache
+    - travis_phantomjs
+    - node_modules
